styles/breakout.css
main {
    display: flex;
    flex-direction: column;
    align-items: center;

    margin-top: 4rem;
    transition: all 0.75s;
}

main .text-holder {
    gap: 25px;
    transition: all 1s;
}

main.after .text-holder {
    gap: 16px;
}


h2 {
    color: #e3e3e3;
}

p {
    margin: 0;
}

strong {color: #e3e3e3;}

ul, ol {
    font-family: "Inter", sans-serif;
    font-size: 1rem;
    color: #e3e3e3;
}

code {
    background-color: #2c2c2c;
    border-radius: 4px;
    padding: 4px;
    margin: 0;
}

.dramatic {margin-top: 1rem;}

.stack {
    color: #999999;
    margin-bottom: 3rem;
}

.text-holder {
    display: flex;
    flex-direction: column;
    margin-top: 5rem;
}

.back-link p {
    color: #999999;
    transition: all 0.5s;
}

.back-link:hover p {color: white;}

